--- a/.github/workflows/woo-page-deploy.yml
+++ b/.github/workflows/woo-page-deploy.yml
@@ -15,11 +15,11 @@ env: # Change these to your preferences any image url can also be a base encoded
   FAVICON_URL: "https://www.roosendaal.nl/sites/default/themes/custom/toptasks_sub_theme/favicon/favicon-32x32.png?v=XBJGWeboww"
   HEADER_LOGO_URL: "https://www.roosendaal.nl/"
   ORGANISATION_NAME: "Gemeente Roosendaal"
-  JUMBOTRON_IMAGE_URL: "https://www.roosendaal.nl/sites/default/files/styles/hero_medium/public/2024-01/m%2023-6%20nr%200370%20De%20Stok.JPG?h=8bbb4898&itok=CR8MxLsj"
+  JUMBOTRON_IMAGE_URL: "https://raw.githubusercontent.com/ConductionNL/woo-website-roosendaal/main/roosendaal_jumbotron.jpg"
   FOOTER_LOGO_URL: "false"
   FOOTER_LOGO_HREF: "https://www.roosendaal.nl/"
   FOOTER_CONTENT: "https://raw.githubusercontent.com/ConductionNL/${{github.event.repository.name}}/main/FooterContent.json"
-  FOOTER_CONTENT_HEADER: "heading-2"
+  FOOTER_CONTENT_HEADER: "heading-3"
   # OIDN_NUMBER: " "
   ENV_VARS_SET: "true"
 
